Remove inline width and height of img tag in first-two div class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      </div>
 
      <div class="first-two"> 
-        <img src="./img/rose.jpg" alt="Rose image" min-width="80%" height="250px">
+        <img src="./img/rose.jpg" alt="Rose image">
      </div>
     </div>
     </div>
