Add four images using img tag in second-section div class

--- a/index.html
+++ b/index.html
@@ -34,5 +34,17 @@
     </div>
     </div>
 
+    <div class="second-section">
+        <h1>Some Random information</h1>
+
+        <div class="four-img">
+            <div class="img-one"><img src="./img/cat-one.jpg" alt="Image of cat number one"></div>
+            <div class="img-two"><img src="./img/cat-two.jpg" alt="Image of cat number two"></div>
+            <div class="img-three"><img src="./img/cat-three.jpg" alt="Image of cat number three"></div>
+            <div class="img-four"><img src="./img/cat-four.jpg" alt="Image of cat number four"></div>
+        </div>
+
+    </div>
+
 </body>
 </html>
