Add second-section div class which contains the contents of the random information section on the index page

--- a/index.html
+++ b/index.html
@@ -35,13 +35,25 @@
     </div>
 
     <div class="second-section">
-        <h1>Some Random information</h1>
+        <h1>Some Random Information.</h1>
 
         <div class="four-img">
-            <div class="img-one"><img src="./img/cat-one.jpg" alt="Image of cat number one"></div>
-            <div class="img-two"><img src="./img/cat-two.jpg" alt="Image of cat number two"></div>
-            <div class="img-three"><img src="./img/cat-three.jpg" alt="Image of cat number three"></div>
-            <div class="img-four"><img src="./img/cat-four.jpg" alt="Image of cat number four"></div>
+            <div class="img-one">
+                <img src="./img/cat-one.jpg" alt="Image of cat number one">
+                <p>This is an image of a cat.</p>
+            </div>
+            <div class="img-two">
+                <img src="./img/cat-two.jpg" alt="Image of cat number two">
+                <p>This is a second image of a cat.</p>
+            </div>
+            <div class="img-three">
+                <img src="./img/cat-three.jpg" alt="Image of cat number three">
+                <p>This is a third image of a cat.</p>
+            </div>
+            <div class="img-four">
+                <img src="./img/cat-four.jpg" alt="Image of cat number four">
+                <p>This is a fourth image of a cat.</p>
+            </div>
         </div>
 
     </div>
