Add third-section div class which contains the contents for the quote section on the index page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
     <div class="second-section">
         <h1>Some Random Information.</h1>
-
         <div class="four-img">
             <div class="img-one">
                 <img src="./img/cat-one.jpg" alt="Image of cat number one">
@@ -55,6 +54,20 @@
                 <p>This is a fourth image of a cat.</p>
             </div>
         </div>
+    </div>
+
+    <div class="third-section">
+
+    <div class="quote">    
+        <p>
+            You have brains in your head. You have feet in your shoes. 
+            You can steer yourself any direction you choose. You're on your own. And you know what you know. 
+            And you are the guy who'll decide where to go.
+        </p>
+        <span>
+            -Dr.Seuss  
+        </span>
+    </div>
 
     </div>
 
