Add fourth-section div class which contains the content of the call to action section on the index page

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     </div>
 
     <div class="third-section">
-
-    <div class="quote">    
+     <div class="quote">    
         <p>
             You have brains in your head. You have feet in your shoes. 
             You can steer yourself any direction you choose. You're on your own. And you know what you know. 
@@ -67,8 +66,19 @@
         <span>
             -Dr.Seuss  
         </span>
+     </div>
     </div>
 
+    <div class="fourth-section">
+        <div class="call-to-action">
+            <div class="action-text">
+                <span>Call to action! It's time!</span>
+                <p>Signup for our product by clicking that button right over there!</p>
+            </div>
+            <div class="action-button">
+                <button>Sign Up</button>
+            </div>
+        </div>
     </div>
 
 </body>
