--- a/index.html
+++ b/index.html
@@ -81,5 +81,9 @@
         </div>
     </div>
 
+    <footer>
+        <span>Copyright © The Odin Project 2021</span>
+    </footer>
+
 </body>
 </html>
